<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:id="@+id/stroke_count"
        android:textSize="60sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"/>
    <!-- Write the content from code -->

    <LinearLayout android:id="@+id/time_info"
        android:layout_below="@id/stroke_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/activity_vertical_margin" >

        <ImageView android:src="@drawable/ic_timer_white_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription" />

        <Chronometer android:id="@+id/time_count"
            android:format="%s"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin" />

        <TextView android:text="@string/average"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView android:id="@+id/average_count"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView android:text="@string/per_min"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button android:id="@+id/start_button"
        android:onClick="onStartClickHandler"
        android:layout_below="@id/time_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin" />
    <!-- Define the button label in code, change it to "Stop" when the counter is
    running and vice versa -->

    <Button android:id="@+id/reset_button"
        android:onClick="onResetClickHandler"
        android:layout_alignBottom="@id/start_button"
        android:layout_toEndOf="@id/start_button"
        android:text="@string/reset_button_label"
        android:drawableStart="@drawable/ic_replay_white_36dp"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView android:id="@+id/selected_device_label"
        android:text="@string/selected_device_label"
        android:layout_below="@id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView android:id="@+id/selected_bt_device"
        android:layout_toRightOf="@id/selected_device_label"
        android:layout_alignBottom="@id/selected_device_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_below="@id/selected_device_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button android:id="@+id/connect_button"
            android:onClick="onConnectClickHandler"
            android:text="@string/connect_button_label"

            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView android:id="@+id/connect_state"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>
